# docs-plus-plus

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Engine.cpp  Engine.h  InMemoryIndex.cpp  InMemoryIndex.h  SynonymAnalyzer.cpp  SynonymAnalyzer.h  SynonymTokenizer.cpp  SynonymTokenizer.h  main.cpp
